# bevy_my_template

./: .gitignore  Cargo.toml  README.md  game.d.ts  game.js  game_bg.wasm.d.ts  index.html  rust-toolchain.toml  sound.js
.cargo/: config.toml
.github/workflows/: gh-pages.yml
assets/: music.xrns  otter.gltf  panda.gltf  to_webp.bat  wav_to_ogg.bat
src/: button.rs  default_font.rs  framerate.rs  main.rs  mute.rs  text_to_image.rs  utils.rs  web_event.rs
